<resources>
    <string name="app_name">Task1</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_task">Enter Task</string>
    <string name="save">Save</string>
    <string name="task">Task:-</string>
    <string name="date">Date:-</string>
    <string name="update">Update</string>
    <string name="time">Time:-</string>
    <string name="enter_time">Enter Time</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="edit">Edit</string>
</resources>